--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ name = "simkl"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0", optional = true }
+serde_json = { version = "1.0" }
 
 [dev-dependencies]
