--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "simkl"
 authors = ["Sébastien LUNDI"]
-description = "XMLTV for electronic program guide (EPG) parser and generator using serde."
+description = "Library to build queries for SIMKL and decoding JSON responses using Serde"
 version = "0.0.1"
 edition = "2021"
 readme = "README.md"
 license = "MIT/Apache-2.0"
 repository = "https://codeberg.org/slundi/simkl"
-keywords = ["simkl", "serde", "api", "anime", "movie", "tv", "tvdb"]
+keywords = ["simkl", "api", "anime", "movie", "tv"]
 categories = ["parsing", "data-structures"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
