--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ name = "simkl"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
+urlencoding = "2.1"
 
 [dev-dependencies]
