--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 urlencoding = "2.1"
+url ="2.5"
 
 [dev-dependencies]
